--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "code",
+  "name": "mapmypath",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
