added start in scripts

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "main": "app.js",
   "devDependencies": {},
   "scripts": {
-    "test": "nodemon app.js"
+    "test": "nodemon app.js",
+    "start" : "node app.js"
   },
   "repository": {
     "type": "git",
