Heroku to Firebase:fire::rocket:

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.17.3",
+    "firebase": "^9.14.0",
     "hbs": "^4.2.0",
     "nodemon": "^2.0.15"
   },
@@ -8,7 +9,6 @@
   "description": "A visualiser that helps to understand complex graph algorithms.\r Our main objective was for users to have an interactive experience with our visualiser, the ability to change start/end point, add weight/wall in the path, auto maze generation and more.",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "nodemon app.js",
     "start": "node app.js"
